# fun-blaster-start

./: .gitignore  .gitmodules  CMakeLists.txt
hw/fun-blaster/: audio.kicad_sch  controls.kicad_sch  fun-blaster.kicad_pcb  fun-blaster.kicad_prl  fun-blaster.kicad_pro  fun-blaster.kicad_sch  fun-blaster.kicad_sym  fun-blaster.xml  light.kicad_sch  mcu.kicad_sch  power.kicad_sch  sym-lib-table
hw/fun-blaster/LCSC.3dshapes/: BUZ-TH_BD9.0-P4.00-D0.6-FD.wrl  L1007.wrl  LED-TH_BD6.2-P2.54-FD.wrl  MIC-SMD_8P-L3.0-W4.0-P0.85-BL.wrl  PTS526_08_CNK.step  SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL.wrl  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.wrl  SW-TH_DEALON_SS-12D01-GX.wrl  USB-C_SMD-TYPE-C-31-M-12.wrl
hw/fun-blaster/LCSC.pretty/: 2xAAA-Holder.kicad_mod  BUZ-TH_BD9.0-P4.00-D0.6-FD.kicad_mod  L1007.kicad_mod  LED-TH_BD5.9-P2.54-FD.kicad_mod  LED-TH_BD6.2-P2.54-FD.kicad_mod  MIC-SMD_8P-L3.0-W4.0-P0.85-BL.kicad_mod  PTS526-SM08-SMTR2-LFS.kicad_mod  RubberButton.kicad_mod  SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod  SW-TH_DEALON_SS-12D01-GX.kicad_mod  USB-C_SMD-TYPE-C-31-M-12.kicad_mod
sim/: IR.txt  switch-debounce.txt
src/: CMakeLists.txt  ircodes.c  ircodes.h  main.c  ws.S  ws.c  ws.h
src/boards/: fun_blaster_10.h
tools/: 99-rp2040.rules  ircodes.py  ircodes.yaml
